# django-celery-task-tracker

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test.yml
celery_task_tracker/: __init__.py  apps.py  config.py  registry.py  signals.py  storage.py  tracker.py  urls.py
celery_task_tracker/static/celery_task_tracker/css/: task_tracker.css
celery_task_tracker/templates/admin/celery_task_tracker/: task_tracker.html
celery_task_tracker/templatetags/: __init__.py
celery_task_tracker/tests/: test_config.py
src/celery_task_tracker/: task_tracker.py  utils.py  views.py
src/celery_task_tracker/templates/admin/celery_task_tracker/: change_form.html
src/celery_task_tracker/templatetags/: task_humanize.py
src/celery_task_tracker/tests/: test_signals.py
