[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-celery-tracker"
version = "1.0.0"
description = "Real-time Celery task tracking for Django Admin, backed by Redis."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Elay", email = "dev@elay.io"},
]
keywords = ["django", "celery", "task", "tracker", "admin", "redis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Celery",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
    "celery>=5.0",
    "redis>=4.0",
]

[project.urls]
Homepage = "https://github.com/shayanline/django-celery-tracker"
Repository = "https://github.com/shayanline/django-celery-tracker"
Issues = "https://github.com/shayanline/django-celery-tracker/issues"

[tool.setuptools.packages.find]
include = ["celery_task_tracker*"]

[tool.setuptools.package-data]
celery_task_tracker = [
    "templates/**/*.html",
    "static/**/*.css",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "N"]
