[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-celery-task-tracker"
version = "1.0.0"
description = "Real-time Celery task tracking for Django Admin, backed by Redis."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "shayanline", email = "sh.khaksar95@gmail.com"},
]
keywords = ["django", "celery", "task", "tracker", "admin", "redis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Celery",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
    "celery>=5.0",
    "redis>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/shayanline/django-celery-task-tracker"
Repository = "https://github.com/shayanline/django-celery-task-tracker"
Issues = "https://github.com/shayanline/django-celery-task-tracker/issues"

[tool.hatch.build]
include = [
    "celery_task_tracker/templates/**",
    "celery_task_tracker/static/**",
]

[tool.hatch.build.targets.wheel]
packages = ["celery_task_tracker"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I", "N"]

[tool.pytest.ini_options]
testpaths = ["celery_task_tracker/tests"]
